--- a/index.html
+++ b/index.html
@@ -68,11 +68,8 @@
                     <!-- choose date -->
                     <div class="input-group mb-3 tip-group">
                         <!-- <span class="input-group-text">日期</span> -->
-                        <span class="add-on input-group-text"><i class="fa fa-calendar" aria-hidden="true"></i></span>
-                        <input class="controls input-append date form_date form-control" data-date=""
-                            data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd"
-                            type="text" value="" readonly>
-                        <!-- <input type="hidden" id="dtp_input2" value="" name="date"><br> -->
+                        <span class="input-group-text"><i class="fa fa-calendar" aria-hidden="true"></i></span>
+                        <input type="button" class="form-control" id="datetimepicker" value="" name="date" placeholder="請選擇日期">
                     </div>
 
                     <!-- submit -->
@@ -110,12 +107,14 @@
 
 </body>
 
+<!-- 分類選項 -->
 <template id="showTypes" style="display: none;">
     <input type="radio" class="btn-check form-check-input" name="come-type" id="come-typeN" autocomplete="off"
         value="TYPE">
     <label class="btn btn-secondary input-group-text" for="come-typeN">TYPE</label>
 </template>
 
+<!-- 必填提示 -->
 <template id="tips" style="display: none;">
     <div class="tip">
         <i class="fa fa-exclamation-circle"></i>
