--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
             <article id="article2" class="article article2 my-5">
                 <div class="container rounded bg-form p-3" id="LIST">
                     <div class="row p-2 mb-3 mx-3 fw-bold">
-                        <div class="col text-center">日期</div>
-                        <div class="col text-center">支出/收入</div>
-                        <div class="col text-center">分類</div>
-                        <div class="col text-center">金額</div>
-                        <div class="col text-center">備註</div>
+                        <div class="col-3 text-center">日期</div>
+                        <div class="col-2 text-center">收/支</div>
+                        <div class="col-2 text-center">分類</div>
+                        <div class="col-2 text-center">金額</div>
+                        <div class="col-3 text-center">備註</div>
                     </div>
                     <!-- <div class="row p-2 mb-3 mx-3 rounded bg-field">
                         <div class="col text-center">2022-05-24</div>
@@ -145,11 +145,11 @@
 <!-- 一條帳 -->
 <template id="showList" style="display: none;">
     <div class="row p-2 mb-3 mx-3 rounded bg-field">
-        <div class="col text-center">DATE</div>
-        <div class="col text-center">COME</div>
-        <div class="col text-center">TYPE</div>
-        <div class="col text-center">PRICE</div>
-        <div class="col text-center">MEMO</div>
+        <div class="col-3 text-center">DATE</div>
+        <div class="col-2 text-center">COME</div>
+        <div class="col-2 text-center">TYPE</div>
+        <div class="col-2 text-center">PRICE</div>
+        <div class="col-3 text-center">MEMO</div>
     </div>
 </template>
 
