--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <title>記帳本</title>
@@ -79,7 +78,7 @@
                         <!-- <span class="input-group-text">日期</span> -->
                         <span class="input-group-text bg-label bdy"><i class="fa fa-calendar"
                                 aria-hidden="true"></i></span>
-                        <input type="button" class="form-control bg-field bdy" id="datetimepicker" value="" name="date">
+                        <input type="date" class="form-control bg-field bdy" name="date">
                     </div>
 
                     <!-- submit -->
@@ -118,8 +117,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="./js/bootstrap-datetimepicker.min.js"></script>
-    <script src="./js/bootstrap-datetimepicker.zh-TW.js"></script>
     <script src="./js/main.js"></script>
 
 </body>
@@ -139,6 +136,14 @@
     <div class="tip">
         <i class="fa fa-exclamation-circle"></i>
         <span>這是必填的欄位</span>
+    </div>
+</template>
+
+<!-- 輸入數字提示 -->
+<template id="ruleNum" style="display: none;">
+    <div class="tip">
+        <i class="fa fa-exclamation-circle"></i>
+        <span>請輸入數字</span>
     </div>
 </template>
 
