--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                         <div class="col-2 text-center">金額</div>
                         <div class="col-3 text-center">備註</div>
                     </div>
-                    <!-- <div class="row p-2 mb-3 mx-3 rounded bg-field">
-                            <div class="col text-center">2022-05-24</div>
-                            <div class="col text-center">支出</div>
-                            <div class="col text-center">健康</div>
-                            <div class="col text-center">1280</div>
-                            <div class="col text-center">電動牙刷</div>
-                        </div> -->
+                    <!--<a href="./modify.html" class="row p-2 mb-3 mx-3 rounded bg-field text-decoration-none text-black">
+                            <div class="col-3 text-center">2022-05-24</div>
+                            <div class="col-2 text-center">支出</div>
+                            <div class="col-2 text-center">健康</div>
+                            <div class="col-2 text-center">1280</div>
+                            <div class="col-3 text-center">電動牙刷</div>
+                    </a> -->
                 </div>
             </article>
 
@@ -73,13 +73,13 @@
 
 <!-- 一條帳 -->
 <template id="showList" style="display: none;">
-    <div class="row p-2 mb-3 mx-3 rounded bg-field">
+    <a href="./modify.html?ID" class="row p-2 mb-3 mx-3 rounded bg-field text-decoration-none text-black">
         <div class="col-3 text-center">DATE</div>
         <div class="col-2 text-center">COME</div>
         <div class="col-2 text-center">TYPE</div>
         <div class="col-2 text-center">PRICE</div>
         <div class="col-3 text-center">MEMO</div>
-    </div>
+    </a>
 </template>
 
 </html>
