--- a/modify.html
+++ b/modify.html
@@ -11,7 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>新增記帳</title>
+    <title>編輯記帳</title>
 </head>
 
 <div class="loading">
@@ -22,28 +22,21 @@
 
 <body>
     <header></header>
-    <nav class="d-flex justify-content-evenly my-5">
-        <a href="#" class="nav-btn-active d-flex align-items-center justify-content-center fs-4">
-            <i class="fa fa-plus" aria-hidden="true"></i>
-        </a>
-        <a href="./index.html" class="nav-btn d-flex align-items-center justify-content-center fs-4">
-            <i class="fa fa-list" aria-hidden="true"></i>
-        </a>
-        <a href="#" class="nav-btn d-flex align-items-center justify-content-center fs-4">
-            <i class="fa fa-cog" aria-hidden="true"></i>
-        </a>
+    <nav>
+        <div class="container my-5">
+
+        </div>
     </nav>
     <section>
         <div class="container">
             <article id="" class="my-5">
-                <!-- new income or outcome -->
-                <div class="d-flex justify-content-center">
-                    <input type="button" class="btn new-outcome fw-bold col-6" name="in-out" id="outcome" value="新增支出"
-                        cSwitch="支出">
-                    <input type="button" class="btn new-income fw-bold col-6" name="in-out" id="income" value="新增收入"
-                        cSwitch="收入">
+                <!-- income or outcome -->
+                <div class="d-flex justify-content-between">
+                    <a href="./index.html" class="text-decoration-none text-black fs-4">
+                        <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                    </a>
+                    <div class="d-flex align-items-center justify-content-center cSwitch fw-bold col-4 bg-form">編輯</div>
                 </div>
-
                 <div class="container hide rounded bg-form p-3">
                     <!-- choose type -->
                     <p class="mb-1 fw-bolder">分類</p>
@@ -76,14 +69,13 @@
                     <!-- choose date -->
                     <div class="input-group mb-4 tip-group">
                         <span class="input-group-text bg-label bdy fw-bolder">日期</span>
-                        <!-- <span class="input-group-text bg-label bdy"><i class="fa fa-calendar"
-                                aria-hidden="true"></i></span> -->
                         <input type="date" class="form-control bg-field bdy" name="date">
                     </div>
 
                     <!-- submit -->
                     <div class="d-flex justify-content-center">
-                        <input class="col-2 btn-done fw-bolder text-light border-0 rounded p-2" type="submit" value="新增">
+                        <input class="col-2 btn-done fw-bolder text-light border-0 rounded p-2" type="submit"
+                            value="確認">
                     </div>
                 </div>
             </article>
@@ -96,7 +88,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="./js/input.js"></script>
+    <!-- <script src="./js/input.js"></script> -->
+    <script src="./js/modify.js"></script>
 
 </body>
 
