--- a/modify.html
+++ b/modify.html
@@ -62,7 +62,7 @@
                     <!-- input price -->
                     <div class="input-group mb-3 tip-group">
                         <span class="input-group-text bg-label bdy fw-bolder">$</span>
-                        <input type="text" class="form-control bg-field  bdy"
+                        <input type="number" class="form-control bg-field  bdy"
                             aria-label="Amount (to the nearest dollar)" id="price" name="price">
                     </div>
 
