--- a/input.html
+++ b/input.html
@@ -69,7 +69,7 @@
                     <!-- input price -->
                     <div class="input-group mb-3 tip-group">
                         <span class="input-group-text bg-label bdy fw-bolder">$</span>
-                        <input type="text" class="form-control bg-field  bdy"
+                        <input type="number" class="form-control bg-field  bdy"
                             aria-label="Amount (to the nearest dollar)" id="price" name="price">
                     </div>
 
@@ -117,7 +117,7 @@
     </div>
 </template>
 
-<!-- 輸入數字提示 -->
+<!-- 請輸入數字提示 -->
 <template id="ruleNum" style="display: none;">
     <div class="tip">
         <i class="fa fa-exclamation-circle"></i>
